--- a/maltrieve_aws.cfg
+++ b/maltrieve_aws.cfg
@@ -1,6 +1,5 @@
 [Maltrieve]
 dumpdir = archive
-logfile = maltrieve.log
 logheaders = true
 User-Agent = Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.1; Trident/6.0)
 
@@ -10,5 +9,8 @@ User-Agent = Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.1; Trident/6.0)
 
 
 # Filter Lists are based on mime type NO SPACE BETWEEN ,
-#black_list = text/html,text/plain
-#white_list = application/pdf,application/x-dosexec
+black_list = text/html,text/plain
+white_list = application/pdf,application/x-dosexec
+
+[Amazon]
+bucket = straster-malware-samples
