--- a/docker/supervisord/supervisord.conf
+++ b/docker/supervisord/supervisord.conf
@@ -16,7 +16,7 @@ username=admin
 password="admin"
 
 [program:maltrieve]
-command=/home/maltrieve/maltrieve.py
+command=/home/maltrieve/maltrieve.py -c maltrieve.cfg
 user=maltrieve
 directory=/home/maltrieve
 stopasgroup=true
